@@ -8,6 +8,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed a migration crash when adding the example subfactory with Industrial Revolution loaded
     - Fixed a crash when clicking the ingredient combinator button
+    - Fixed a crash caused by a mod adding trains with a capacity of 0
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.59
